--- a/frontend/css/custom.css
+++ b/frontend/css/custom.css
@@ -25,7 +25,7 @@ html {
 body {
     background: #eee;
     font-family: 'Poppins', sans-serif;
-    font-size: 15px;
+    font-size: 14px;
     line-height: 1.6;
 }
 
@@ -137,17 +137,20 @@ h4 {
 }
 
 /* SignUp*/
+.signUp-form,
+.signIn-form,
+.lists-form {
+    width: 100%;
+    max-width: 600px;
+}
+
 .signUp {
     background: #eee;
 }
 
-.signUp-form {
-    width: 500px;
-}
-
 /* newsletter custom */
 .newsForm {
-    max-width: 70%;
+    max-width:70%;
     margin: auto;
 }
 /* Media Query */
