--- a/client/src/components/properties/properties.module.css
+++ b/client/src/components/properties/properties.module.css
@@ -1,108 +1,144 @@
-.container{
+.container {
     height: 100%;
     width: 100%;
-    margin-top: 7.5rem;
+    margin-top: 2.5rem;
 }
 
-.wrapper{
+.wrapper {
     max-width: 1180px;
     height: 100%;
     margin: 0 auto;
 }
 
-.titles{
+.wrapper>h2{
+    text-align: center;
+    margin-top: 5rem;
+    font-size: 36px;
+    color: #222;
+}
+
+.titles {
+    margin-top: 5rem;
     display: flex;
     align-items: center;
     flex-direction: column;
     gap: 0.5rem;
 }
 
-.titles > h5{
-    color: #0f0f0f;
+.titles>h5 {
+    color: #777;
     font-size: 18px;
     font-weight: 500;
 }
 
-.titles > h2{
+.titles>h2 {
     color: #333;
     font-size: 28px;
 }
 
-.properties{
+.wrapper>.options {
     width: 100%;
-    margin-top: 3rem;
+    padding: 1.25rem 1.5rem;
+    border-radius: 20px;
     display: flex;
-    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.2);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.25);
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
-.properties > .property > .imgContainer{
+.options>select {
+    height: 40px;
+    min-width: 160px;
+    max-width: 200px;
+    border: none;
+    outline: none;
+    padding: 0.25rem 0.75rem;
+    background-color: #039256;
+    color: #fff;
+    border-radius: 12px;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.options>select:first-child {
+    color: #fff;
+}
+
+.options>.rangeInput {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.options> .searchBtn {
+    outline: none;
+    border: none;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    background-color: transparent;
+}
+.options > .searchBtn > .searchIcon{
+    border: 1px solid transparent;
+    border-radius: 50%;
+    padding: 0.6rem;
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(90deg, rgb(25, 185, 33) 0%, rgb(4, 161, 96) 35%, rgb(11, 121, 53) 100%);
+    fill: #fff;
+}
+
+.options> .searchBtn:active > .searchIcon{
+    border: 1px solid rgb(7, 3, 73);
+    fill: rgb(7, 3, 73);
+    background: #fff;
+}
+
+.properties{
+    margin-top: 3rem;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5rem;
+}
+
+.noProperty{
+    text-align: center;
+    margin-top: 5rem;
+    font-size: 36px;
+    color: #222;
+}
+
+.property>.imgContainer {
     display: inline-block;
     height: 350px;
-    width: 80%;
+    width: 100%;
     margin-bottom: 0.5rem;
     overflow: hidden;
     cursor: pointer;
 }
 
-.properties > .property > .imgContainer > img{
+.property>.imgContainer>img {
     height: 100%;
     width: 100%;
     object-fit: cover;
     transition: 150ms all;
 }
 
-.properties > .property > .imgContainer > img:hover{
+.property>.imgContainer>img:hover {
     scale: 1.035;
-}
-
-.properties > .details{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    padding: 0 0.5rem;
-}
-
-.properties > .details > .price{
-    width: 80%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.price{
-    font-weight: bold;
-    font-size: 18px;
-    gap: 1.25rem;
-    margin-bottom: 0.5rem;
-}
-
-.moreDetails{
-    display: flex;
-    align-items: center;
-    gap: 1.25rem;
-    margin-bottom: 0.5rem;
-}
-
-.moreDetails > span{
-    display: flex;
-    align-items: center;
-    gap: 1rem;
 }
 
 .description{
     overflow: hidden;
-    text-decoration: ellipsis;
+    text-overflow: ellipsis;
     white-space: nowrap;
     max-width: 250px;
     font-size: 18px;
     color: #222;
-    margin-bottom: 2rem;
-}
-
-.showMoreButton {
-    display: block;
-    margin: 0 auto;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    text-align: center; 
 }
