--- a/client/src/components/navbar/navbar.module.css
+++ b/client/src/components/navbar/navbar.module.css
@@ -1,4 +1,4 @@
-.container{
+/* .container{
     position: sticky;
     top: 0;
     left: 0;
@@ -85,4 +85,4 @@
     transition: 150ms all;
     cursor: pointer;
     position: relative;
-}
+} */
