--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,184 @@
-*{
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: 'Roboto', sans-serif;
-  scroll-behavior: smooth;
+/** @format */
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600&family=Poppins:wght@300;400;800&display=swap');
+
+:root {
+    --primary: #0d6efd;
+    --Anti-flash-white: #e9ecef;
+    --French-gray1: #ced4da;
+    --French-gray2: #adb5bd;
+    --CoolGrey: #8d99ae;
+    --Platinum: #dee2e6;
+    --Cadet: #282d42;
+    --Payne: #5c6378;
+    --white: #fff;
+    --p-font-size: 17px;
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+    scroll-behavior: smooth;
+}
+
+body {
+    background: #eee;
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+    line-height: 1.6;
+}
+
+img {
+    width: 100%;
+}
+
+/*Custom Utilities */
+
+.section {
+    padding: 50px 0;
+}
+
+/* Navbar custom style */
+.navbar {
+    background: var(--Cadet);
+    z-index: 99;
+}
+.navList {
+    padding: 0 30px;
+}
+
+.signUp-btn {
+    background: var(--primary);
+}
+
+/*Hero/Showcase custom style  */
+.showcase {
+    position: relative;
+    width: 100%;
+    background: burlywood;
+}
+
+h1,
+h2,
+h3,
+h4 {
+    font-family: 'Oswald', sans-serif;
+    font-weight: 500;
+}
+
+.showcase img {
+    height: 575px;
+}
+
+.showcase .carousel-caption {
+    z-index: 2;
+}
+
+.showcase .carousel-caption p {
+    max-width: 680px;
+}
+
+.showcase .btn {
+    padding: 15px 100px;
+}
+
+.showcase .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.show-content {
+    z-index: 2;
+}
+
+/* Search bat/tabs custom style */
+.advanceSearch .container-lg {
+    max-width: 1100px;
+}
+.advanceSearch .tab-content {
+    background: var(--white);
+}
+.tabs {
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.tab {
+    background: #fff;
+    border-radius: 2px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    cursor: pointer;
+    padding: 20px;
+    transition: 0.4s ease;
+    text-align: center;
+}
+
+.tab:hover {
+    background: var(--primary);
+    color: var(--white);
+}
+
+.tab-content {
+    display: none;
+}
+
+.show {
+    display: block;
+}
+
+/* Stats Custom style */
+.stats .rounded-circle {
+    max-width: 300px;
+    height: 300px;
+    margin: auto;
+}
+
+/* SignUp*/
+.signUp {
+    background: #eee;
+    height: 100vh;
+}
+
+.signUp .container-lg {
+    height: 100%;
+}
+.signUp-form,
+.signIn-form,
+.lists-form {
+    width: 100%;
+    max-width: 600px;
+}
+
+/* newsletter custom */
+.newsForm {
+    max-width: 70%;
+    margin: auto;
+}
+
+/* Footer */
+.footer{
+  background: var(--Cadet);
+  color: var(--white);
+}
+/* Media Query */
+@media (max-width: 768px) {
+    .navList {
+        padding: 20px 0px;
+    }
+
+    .stats .rounded-circle {
+        max-width: 200px;
+        height: 200px;
+        margin: auto;
+    }
 }
