review page added

--- a/client/src/components/signup/signup.module.css
+++ b/client/src/components/signup/signup.module.css
@@ -1,4 +1,4 @@
-/* .container {
+.container {
     position: absolute;
     top: 0;
     left: 0;
@@ -101,4 +101,4 @@ form>p>a {
     top: 5rem;
     right: 5rem;
     font-weight: 500;
-} */
+}
