--- a/client/src/components/hero/hero.module.css
+++ b/client/src/components/hero/hero.module.css
@@ -1,4 +1,4 @@
-/* .container{
+.container{
     height: calc(100vh - 60px);
     width: 100%;
     background-color: #fff;
@@ -54,4 +54,4 @@
     background: linear-gradient(90deg, rgb(7, 3, 73) 0%, rgb(14, 14, 132) 35%, rgb(32, 97, 219) 100%);
     fill: #fff;
     cursor: pointer;
-} */
+}
