--- a/client/src/components/signin/signin.module.css
+++ b/client/src/components/signin/signin.module.css
@@ -1,4 +1,4 @@
-/* .container {
+.container {
     position: absolute;
     top: 0;
     left: 0;
@@ -105,4 +105,4 @@ form>p>a {
     display: flex;
     justify-content: center;
     align-items: center;
-} */
+}
