--- a/client/src/components/properties/properties.module.css
+++ b/client/src/components/properties/properties.module.css
@@ -1,4 +1,5 @@
 .container {
+    min-height: calc(100vh - 2.5rem);
     height: 100%;
     width: 100%;
     margin-top: 2.5rem;
@@ -104,7 +105,7 @@
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    gap: 5rem;
+    gap: 3rem;
 }
 
 .noProperty{
@@ -115,6 +116,8 @@
 }
 
 .property>.imgContainer {
+    height: 350px; 
+    width: 250px;
     display: inline-block;
     height: 350px;
     width: 100%;
@@ -123,7 +126,16 @@
     cursor: pointer;
 }
 
+.propertyImage {
+    height: 200px; /* Set your desired height */
+    width: 300px;  /* Set your desired width */
+    object-fit: cover; /* Maintain aspect ratio while covering the container */
+  }
+  
 .property>.imgContainer>img {
+    max-height: 100%; 
+    max-width: 100%;
+    object-fit: cover;
     height: 100%;
     width: 100%;
     object-fit: cover;
